# zero2prod

./: .env  Cargo.toml  configuration.yaml
.github/workflows/: general.yml
migrations/: 20260617000712_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
