[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
# We could use any path here, but we are following the cummunity convention
# We could specify a libarary name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double squaer brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.13.0"
chrono = "0.4.45"
config = "0.15.24"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.3", features = ["v4"] }

[dev-dependencies]
reqwest = "0.13.4"
